# OpenJarvis

./: .gitignore  CLAUDE.md  NOTES.md  README.md  alpha_summary.md  api_call.py  api_caller.py  calendar_event.ics  daily_briefing.md  events.md  humanized_blog.txt  market_research.md  meeting.ics  meeting_event.ics  meeting_project_sync.ics  mkdocs.yml  polymarket_briefing.md  project_sync.ics  project_sync_meeting.ics  pyproject.toml  run_dry_run.py  run_full_optimization.py  summary_output.txt  triage_report.md
.github/workflows/: desktop.yml  docs.yml
calendar/: project_sync.ics
config/: database.yml  server.conf  settings.json
configs/openjarvis/: config.toml
desktop/: package.json
desktop/scripts/: download-ollama.sh
desktop/src-tauri/: Cargo.toml  tauri.conf.json
docs/: downloads.md  index.md  leaderboard.md
docs/api/: agents.md  bench.md  core.md  engine.md  index.md  intelligence.md  learning.md  memory.md  sdk.md  server.md  telemetry.md  tools.md  traces.md
docs/architecture/: agents.md  design-principles.md  engine.md  intelligence.md  learning.md  memory.md  overview.md  query-flow.md
docs/deployment/: api-server.md  launchd.md  systemd.md
docs/development/: changelog.md  contributing.md  extending.md  roadmap.md
docs/experiments/: distillation-experiment-plan.md  neurips-2026-plan.md  (+1 more)
frontend/: package-lock.json  package.json  tsconfig.tsbuildinfo
scripts/: publish_results.py  quickstart.sh  run_qwen_benchmarks.sh  serve_gemma.sh  supabase-schema.sql
tests/: test_datautils.py  test_llm_optimizer.py  test_search_space.py
(+474 files in other folders)
