[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "datautils"
version = "0.1.0"
description = "A utility library for data processing"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

[project.optional-dependencies]
dev = ["pytest>=7.0"]
